[package]
name = "yuka-native"
version = "0.1.0"
authors = ["Akihiro <at.sisy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9.3"
toml = "0.5.8"
serde = { version = "1.0.126", features = ["derive"] }
base64 = "0.13.0"
rust-crypto = "0.2.36"
aes-stream = "0.2.1"
serde_with = "1.9.4"
chrono = "0.4.19"

[lib]
crate-type = ["cdylib"]